{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 51,
  "lineage": "c2a00a7a-987f-f0ac-7fae-ace3531b2b6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:loadbalancer/app/my-alb/dd5d954682d071b6",
            "arn_suffix": "app/my-alb/dd5d954682d071b6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-444268776.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:loadbalancer/app/my-alb/dd5d954682d071b6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-083bd31f52113a950"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-058a44c9769d66836"
              },
              {
                "subnet_id": "subnet-0ce0e9ec3ba58aac7"
              }
            ],
            "subnets": [
              "subnet-058a44c9769d66836",
              "subnet-0ce0e9ec3ba58aac7"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "tags_all": {
              "Name": "my-alb"
            },
            "vpc_id": "vpc-07de7778c11b6817b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:listener/app/my-alb/dd5d954682d071b6/174906e2d41102a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:targetgroup/my-app-tg/741b95f53f2ceba1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:listener/app/my-alb/dd5d954682d071b6/174906e2d41102a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:loadbalancer/app/my-alb/dd5d954682d071b6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:targetgroup/my-app-tg/741b95f53f2ceba1",
            "arn_suffix": "targetgroup/my-app-tg/741b95f53f2ceba1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:656732270450:targetgroup/my-app-tg/741b95f53f2ceba1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:security-group/sg-083bd31f52113a950",
            "description": "Allow HTTP to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083bd31f52113a950",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "656732270450",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:security-group/sg-01d9851b4fb385433",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d9851b4fb385433",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083bd31f52113a950"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "656732270450",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:internet-gateway/igw-057ffc016421de29a",
            "id": "igw-057ffc016421de29a",
            "owner_id": "656732270450",
            "tags": {
              "Name": "dev-duchuy-igw"
            },
            "tags_all": {
              "Name": "dev-duchuy-igw"
            },
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057ffc016421de29a",
            "id": "r-rtb-0daf0245d7f4babff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0daf0245d7f4babff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:route-table/rtb-0daf0245d7f4babff",
            "id": "rtb-0daf0245d7f4babff",
            "owner_id": "656732270450",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-duchuy-public-rt"
            },
            "tags_all": {
              "Name": "dev-duchuy-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd876d2e44f328dc",
            "route_table_id": "rtb-0daf0245d7f4babff",
            "subnet_id": "subnet-0ce0e9ec3ba58aac7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03955a1e0d3476f6d",
            "route_table_id": "rtb-0daf0245d7f4babff",
            "subnet_id": "subnet-058a44c9769d66836"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:subnet/subnet-0ce0e9ec3ba58aac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce0e9ec3ba58aac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656732270450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-duchuy-public-subnet-1a"
            },
            "tags_all": {
              "Name": "dev-duchuy-public-subnet-1a"
            },
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:subnet/subnet-058a44c9769d66836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a44c9769d66836",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656732270450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-duchuy-public-subnet-1b"
            },
            "tags_all": {
              "Name": "dev-duchuy-public-subnet-1b"
            },
            "vpc_id": "vpc-07de7778c11b6817b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:656732270450:vpc/vpc-07de7778c11b6817b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ee035d7fef8845c",
            "default_route_table_id": "rtb-0525392099bdf5b9f",
            "default_security_group_id": "sg-05dc0550d54f8a874",
            "dhcp_options_id": "dopt-0061c496b4e825529",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07de7778c11b6817b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0525392099bdf5b9f",
            "owner_id": "656732270450",
            "tags": {
              "Name": "dev-duchuy-vpc"
            },
            "tags_all": {
              "Name": "dev-duchuy-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}